Page MenuHome GnuPG

gpgconf --change-option should not print a warning when the relevant conf file does not exist
Closed, ResolvedPublic

Description

To disable ccid on scdeamon, the user can run:

    printf 'disable-ccid:0:1\n' | gpgconf --change-options scdaemon > /dev/null

but if ~/.gnupg/scdaemon.conf doesn't exist before this is run, this produces
the warning to stderr:

gpgconf: warning: can not open config file /home/user/.gnupg/scdaemon.conf:

No such file or directory

This warning is not useful or meaningful (there's nothing the user can or should
do about it) and it encourages people to ignore warnings from gpgconf. It
should be suppressed.

Details

Version
2.1.18

Event Timeline

dkg added projects: gnupg, Bug Report.
dkg added a subscriber: dkg.
werner added a subscriber: werner.

Fixed with commit 30dac04 but not properly tested.

werner claimed this task.